WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190613
Test imported/blink/fast/forms/datalist/slider-appearance-with-ticks-crash.html fails
https://bugs.webkit.org/show_bug.cgi?id=190613
Summary
Test imported/blink/fast/forms/datalist/slider-appearance-with-ticks-crash.ht...
Wenson Hsieh
Reported
2018-10-15 19:18:17 PDT
Support rendering tick marks for range inputs with datalists
Attachments
Patch
(3.36 KB, patch)
2020-02-27 06:12 PST
,
Carlos Garcia Campos
wenson_hsieh
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2020-02-27 06:08:17 PST
This is already supported, I can see the tick marks in Safari. However, the test imported/blink/fast/forms/datalist/slider-appearance-with-ticks-crash.html is failing because we are not checking the input is actually a range control in RenderTheme::paintSliderTicks(). Since this is the bug associated with the test in the expectations, I'll reuse it to fix the test.
Carlos Garcia Campos
Comment 2
2020-02-27 06:12:10 PST
Created
attachment 391852
[details]
Patch
Carlos Garcia Campos
Comment 3
2020-02-28 00:48:15 PST
Committed
r257623
: <
https://trac.webkit.org/changeset/257623
>
Radar WebKit Bug Importer
Comment 4
2020-02-28 00:49:14 PST
<
rdar://problem/59880405
>
Ryosuke Niwa
Comment 5
2020-03-17 17:32:50 PDT
***
Bug 208315
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug