Test imported/blink/fast/forms/datalist/slider-appearance-with-ticks-crash.html fails https://bugs.webkit.org/show_bug.cgi?id=190613

Reviewed by Wenson Hsieh.

Source/WebCore:

Check the input is a range control before trying to paint slider ticks.

* rendering/RenderTheme.cpp:
(WebCore::RenderTheme::paintSliderTicks):

LayoutTests:

Remove test expectations.

* TestExpectations:
* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/221292@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257623 268f45cc-cd09-0410-ab3c-d52691b4dbfc